--- a/example/package.json
+++ b/example/package.json
@@ -15,6 +15,7 @@
     "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-reanimated": "^3.1.0",
+    "react-native-screens": "^3.24.0",
     "react-native-shared-element": "^0.8.8",
     "react-native-shared-element-orchestrator": "^1.0.2"
   },
