--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
 	"peerDependencies": {
 		"react": "*",
 		"react-native": "*",
-		"react-native-shared-element": "^0.8.8",
-		"react-native-screens": "^3.20.0"
+		"react-native-screens": "^3.20.0",
+		"react-native-shared-element": "^0.8.8"
 	},
 	"devDependencies": {
 		"@types/react": "^18.2.0",
